--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "nodemailer": "^7.0.5"
   }
 }
